# BookFlow

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  backend.err  docker-compose.yml  pyproject.toml  test_backend.py  test_direct.py
migrations/: env.py
migrations/versions/: 4754fdd02299_create_all_tables.py  6b09965e5df5_initial.py
scripts/: docker-entrypoint.sh
src/application/: base.py
src/application/dtos/appointments/: __init__.py  (+5 more)
src/application/exceptions/: __init__.py  application_error.py
src/application/ports/: token_service.py  unit_of_work.py
src/domain/: base.py
src/domain/entities/: appointment.py  client.py  employee.py  organization.py  organization_member.py  service.py  user.py
src/domain/events/: base.py
src/domain/exceptions/: domain_error.py
src/domain/repositories/: appointment_repository.py  base.py  client_repository.py  employee_repository.py  organization_member_repository.py  organization_repository.py  service_repository.py  user_repository.py
src/infrastructure/auth/: jwt.py  password.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: engine.py  unit_of_work.py
src/infrastructure/di/: containers.py  providers.py
src/presentation/: main.py  pagination.py  responses.py
src/presentation/api/: errors.py  middleware.py
tests/: conftest.py
tests/integration/: test_repositories.py
tests/integration/api/: conftest.py  test_appointments.py  test_auth.py  test_employees.py  test_organizations.py  test_services.py
tests/unit/application/: conftest.py
(+81 files in other folders)
